--- a/WpfApp1/Styles/MainStyle.xaml
+++ b/WpfApp1/Styles/MainStyle.xaml
@@ -47,7 +47,8 @@
                     <Border
                         Background="{TemplateBinding Background}"
                         BorderBrush="{TemplateBinding BorderBrush}"
-                        BorderThickness="{TemplateBinding BorderThickness}">
+                        BorderThickness="{TemplateBinding BorderThickness}"
+                        CornerRadius="5">
                         <Grid>
                             <ScrollViewer x:Name="PART_ContentHost" />
                             <TextBlock
