--- a/WpfApp1/Styles/MainStyle.xaml
+++ b/WpfApp1/Styles/MainStyle.xaml
@@ -11,6 +11,7 @@
     <SolidColorBrush x:Key="SecondaryWhite" Color="#aaaaaa"></SolidColorBrush>
     <SolidColorBrush x:Key="DarkGray" Color="#333333"></SolidColorBrush>
 
+
     <Style TargetType="{x:Type Button}" x:Key="GeneralPurposeButton">
         <Setter Property="Background" Value="{DynamicResource PrimaryBlue}"/>
         <Setter Property="FontSize" Value="20"/>
@@ -29,6 +30,31 @@
             </Trigger>
             <Trigger Property="IsMouseCaptured" Value="True">
                 <Setter Property="Background" Value="{DynamicResource PrimaryGreen}"/>
+            </Trigger>
+        </Style.Triggers>
+    </Style>
+
+    <Style TargetType="{x:Type Button}" x:Key="CloseButton">
+        <Setter Property="Background" Value="DarkRed"/>
+        <Setter Property="Foreground" Value="White"/>
+        <Setter Property="FontSize" Value="20"/>
+        <Setter Property="VerticalContentAlignment" Value="Center"/>
+        <Setter Property="FontWeight" Value="Black"/>
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type Button}">
+                    <Border Background="{TemplateBinding Background}" BorderBrush="{DynamicResource DarkGray}" BorderThickness="2" CornerRadius="5">
+                        <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                    </Border>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+        <Style.Triggers>
+            <Trigger Property="IsMouseOver" Value="True">
+                <Setter Property="Background" Value="#cc0000"/>
+            </Trigger>
+            <Trigger Property="IsMouseCaptured" Value="True">
+                <Setter Property="Background" Value="Black"/>
             </Trigger>
         </Style.Triggers>
     </Style>
