--- a/WpfApp1/Settings.xaml
+++ b/WpfApp1/Settings.xaml
@@ -13,10 +13,13 @@
 
     <Border CornerRadius="20" Background="#ff292929" BorderThickness="1" BorderBrush="#ff191919">
         <Grid>
+            <Grid.Effect>
+                <DropShadowEffect/>
+            </Grid.Effect>
 
             <Label Content="Settings" Foreground="#dddddd" FontSize="20" Grid.ColumnSpan="2" Margin="10,10,190,-10" FontWeight="Bold" FontFamily="Cascadia Code"></Label>
 
-            <Label Content="Server address" Foreground="#dddddd" FontSize="17" Margin="10,90,190,282" FontFamily="Cascadia Code" RenderTransformOrigin="0.5,0.5">
+            <Label Content="Server address" Foreground="#dddddd" FontSize="17" Margin="32,85,168,287" FontFamily="Cascadia Code" RenderTransformOrigin="0.5,0.5">
                 <Label.RenderTransform>
                     <TransformGroup>
                         <ScaleTransform/>
@@ -27,16 +30,16 @@
                 </Label.RenderTransform>
             </Label>
 
-            <TextBox Margin="10,119,109,244"
+            <TextBox Margin="37,119,136,244"
                 Name="serverAddressName" 
                      Style="{StaticResource NormalTextBox}"
             />
 
-            <Button Margin="496,119,10,244"
+            <Button Margin="467,119,39,244"
                     Name="saveServerAddress" 
                     Click="saveServerAddress_Click" 
                     Content="Save"
-                    Style="{StaticResource GeneralPurposeButton}"></Button>
+                    Style="{StaticResource GeneralPurposeButton}"/>
 
 
             <!-- CLOSING BUTTON -->
