--- a/WpfApp1/MainWindow.xaml
+++ b/WpfApp1/MainWindow.xaml
@@ -1,14 +1,13 @@
 ﻿<Window x:Class="WpfApp1.MainWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:WpfApp1"
+	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+	xmlns:local="clr-namespace:WpfApp1"
         mc:Ignorable="d"
         Title="Traccar Client" Height="400" Width="600"
         AllowsTransparency="True"
         WindowStyle="None" ResizeMode="NoResize" Background="{x:Null}" MouseDown="Window_MouseDown">
-
     <Border CornerRadius="20" Background="#ff292929" BorderThickness="1" BorderBrush="#ff191919">
         <Grid>
             <Grid.ColumnDefinitions>
@@ -16,11 +15,9 @@
                 <ColumnDefinition Width="200"></ColumnDefinition>
                 <ColumnDefinition Width="200"></ColumnDefinition>
             </Grid.ColumnDefinitions>
-
             <Grid.RowDefinitions>
                 <RowDefinition Height="75"></RowDefinition>
             </Grid.RowDefinitions>
-
             <TextBlock Margin="164,0,0,-314" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Bottom" Foreground="#FF717171" FontFamily="Cascadia Code" TextAlignment="Center" Grid.ColumnSpan="3" Height="36" Width="264" FontSize="10">
                 <TextBlock.RenderTransform>
                     <TransformGroup>
@@ -29,13 +26,30 @@
                         <RotateTransform Angle="0.021"/>
                         <TranslateTransform/>
                     </TransformGroup>
-                </TextBlock.RenderTransform><Run Language="it-it" Text="v. 0.0.0"/><LineBreak/><Run Language="it-it" Text="Developed by Armando Lattaruli"/><LineBreak/><Run Language="it-it"/></TextBlock>
+                </TextBlock.RenderTransform>
+				<Run Language="it-it" Text="v. 0.0.0"/>
+				<LineBreak/>
+				<Run Language="it-it" Text="Developed by Armando Lattaruli"/>
+				<LineBreak/>
+				<Run Language="it-it"/>
+            </TextBlock>
 
-            <Button Margin="152,210,162,-164" Cursor="Hand"
-                    Click="rivelaPosizione" Grid.ColumnSpan="3" Content="Update position"/>
+            <Button Margin="65,175,65,-173" Cursor="Hand"
+                    Click="rivelaPosizione" Grid.Column="1" ToolTip="Update position manually">
+                <Button.Style>
+                    <Style TargetType="Button" BasedOn="{StaticResource CloseButton}">
+                        <Setter Property="Background" Value="{DynamicResource SecondaryBlue}"/>
+                        <Style.Triggers>
+                            <Trigger Property="IsMouseOver" Value="True">
+                                <Setter Property="Background" Value="{DynamicResource PrimaryBlue}"/>
+                            </Trigger>
+                        </Style.Triggers>
+                    </Style>
+                </Button.Style>
+                <Image Source="/assets/location-sign.png" Height="40" Width="40" />
+            </Button>
 
             <Label Content="LATITUDE:" Margin="123,253,0,-204" Foreground="#FFF7F7F7" FontFamily="Cascadia Code"/>
-
             <TextBlock Text="N/D" x:Name="textForLatitude" Foreground="#FFF56C2C" FontSize="17" Grid.ColumnSpan="2" Margin="38,284,133,-237" TextAlignment="Center">
                 <TextBlock.Effect>
                     <DropShadowEffect/>
@@ -47,7 +61,6 @@
                     <DropShadowEffect/>
                 </TextBlock.Effect>
             </TextBlock>
-
             <Label Content="LONGITUDE:" Margin="0,253,123,-204" Foreground="#FFF7F7F7" FontFamily="Cascadia Code" Grid.Column="2"/>
             <Label Content="LATEST UPDATE:" Margin="46,253,46,-204" Foreground="#FFF7F7F7" FontFamily="Cascadia Code" Grid.Column="1"/>
             <TextBlock Text="N/D" x:Name="dateUpdate" Foreground="#FFF56C2C" FontSize="17" Margin="41,284,41,-269" TextAlignment="Center" Grid.Column="1" TextWrapping="Wrap">
@@ -55,7 +68,6 @@
                     <DropShadowEffect/>
                 </TextBlock.Effect>
             </TextBlock>
-
             <!-- CLOSING BUTTON -->
             <Button x:Name="CloseButtonSettings" Click="closeWindowPersonalized"
                     Style="{StaticResource CloseButton}"
@@ -63,12 +75,10 @@
                 <Image Source="/Styles/close.png" Width="20" Height="20"
                        VerticalAlignment="Center"/>
             </Button>
-
             <!-- KILL BUTTON -->
             <Button Click="closeWindowPersonalized"
                     Margin="105,10,55,25" Width="40" Height="40" ToolTip="Kill process" Cursor="Hand" Grid.Column="2"                    >
                 <Image Source="/assets/skullWhite.png" Width="25" Height="25"/>
-
                 <Button.Style>
                     <Style TargetType="Button" BasedOn="{StaticResource CloseButton}">
                         <Setter Property="Background" Value="Black"/>
@@ -80,14 +90,11 @@
                     </Style>
                 </Button.Style>
             </Button>
-
             <Button Margin="10,363,165,-313" Click="Button_Click" Height="25" Width="25" >
                 <Image Source="assets/settings.png"/>
-
                 <Button.Style>
                     <Style TargetType="Button" BasedOn="{StaticResource PictureButton}">
                         <Setter Property="Background" Value="Transparent"/>
-
                         <Style.Triggers>
                             <Trigger Property="IsMouseOver" Value="True">
                                 <Setter Property="Effect">
@@ -100,13 +107,6 @@
                     </Style>
                 </Button.Style>
             </Button>
-
-
         </Grid>
-
-
     </Border>
-
-
-
 </Window>
