--- a/WpfApp1/Settings.xaml
+++ b/WpfApp1/Settings.xaml
@@ -7,19 +7,15 @@
         mc:Ignorable="d"
         Title="Traccar Client" Height="400" Width="600"
         AllowsTransparency="True"
-        WindowStyle="None" ResizeMode="NoResize" Background="{x:Null}" MouseDown="Window_MouseDown" FontFamily="Cascadia Code"
+        WindowStyle="None" ResizeMode="NoResize" Background="{x:Null}" MouseDown="Window_MouseDown" FontFamily="Cascadia Code" BorderThickness="6,0,0,0"
         
         >
 
     <Border CornerRadius="20" Background="#ff292929" BorderThickness="1" BorderBrush="#ff191919">
         <Grid>
-            <Grid.Effect>
-                <DropShadowEffect/>
-            </Grid.Effect>
+            <Label Content="Settings" Foreground="#dddddd" FontSize="20" Margin="10,10,190,348" FontWeight="Bold" FontFamily="Cascadia Code"/>
 
-            <Label Content="Settings" Foreground="#dddddd" FontSize="20" Grid.ColumnSpan="2" Margin="10,10,190,-10" FontWeight="Bold" FontFamily="Cascadia Code"></Label>
-
-            <Label Content="Server address" Foreground="#dddddd" FontSize="17" Margin="32,85,168,287" FontFamily="Cascadia Code" RenderTransformOrigin="0.5,0.5">
+            <Label Content="Server address" Foreground="#dddddd" FontSize="17" Margin="32,85,397,287" FontFamily="Cascadia Code" RenderTransformOrigin="0.5,0.5">
                 <Label.RenderTransform>
                     <TransformGroup>
                         <ScaleTransform/>
@@ -37,22 +33,34 @@
 
             <Button Margin="467,119,39,244"
                     Name="saveServerAddress" 
-                    Click="saveServerAddress_Click" 
-                    Content="Save"
-                    Style="{StaticResource GeneralPurposeButton}"/>
+                    Click="saveServerAddress_Click">
+                <Image Source="/assets/diskette.png" Width="25" Height="25"/>
+
+                <Button.Style>
+                    <Style TargetType="Button" BasedOn="{StaticResource CloseButton}">
+                        <Setter Property="Background" Value="#009900"/>
+                        <Style.Triggers>
+                            <Trigger Property="IsMouseOver" Value="True">
+                                <Setter Property="Background" Value="#00aa00"/>
+                            </Trigger>
+                        </Style.Triggers>
+                    </Style>
+                </Button.Style>
+
+            </Button>
 
 
             <!-- CLOSING BUTTON -->
             <Button x:Name="CloseButtonSettings" Click="MaincloseWindowPersonalized"
                     Style="{StaticResource CloseButton}"
-                    Margin="548,10,10,348" Width="40" Height="40" Cursor="Hand" ToolTip="Close">
+                    Margin="525,10,27,348" Width="40" Height="40" Cursor="Hand" ToolTip="Close">
                 <Image Source="/Styles/close.png" Width="20" Height="20"
                        VerticalAlignment="Center"/>
             </Button>
 
             <!-- KILL BUTTON -->
             <Button Click="MaincloseWindowPersonalized"
-                    Margin="502,10,56,348" Width="40" Height="40" ToolTip="Kill process" Cursor="Hand"                    >
+                    Margin="480,10,72,348" Width="40" Height="40" ToolTip="Kill process" Cursor="Hand">
                 <Image Source="/assets/skullWhite.png" Width="25" Height="25"/>
 
                 <Button.Style>
