Adding background task + testing

--- a/WpfApp1/MainWindow.xaml
+++ b/WpfApp1/MainWindow.xaml
@@ -76,7 +76,7 @@
                        VerticalAlignment="Center"/>
             </Button>
             <!-- KILL BUTTON -->
-            <Button Click="closeWindowPersonalized"
+            <Button Click="killSender"
                     Margin="105,10,55,25" Width="40" Height="40" ToolTip="Kill process" Cursor="Hand" Grid.Column="2"                    >
                 <Image Source="/assets/skullWhite.png" Width="25" Height="25"/>
                 <Button.Style>
