--- a/WpfApp1/MainWindow.xaml
+++ b/WpfApp1/MainWindow.xaml
@@ -34,6 +34,12 @@
 				<Run Language="it-it"/>
             </TextBlock>
 
+            <Image Source="/assets/icon.png" Margin="8,15,158,30" />
+            <TextBlock Text="Traccar client for Windows"
+                       FontSize="21"
+                       Foreground="#dddddd" Margin="45,15,62,28" Grid.ColumnSpan="2"></TextBlock>
+
+
             <Button Margin="65,126,65,-124" Cursor="Hand"
                     Click="rivelaPosizione" Grid.Column="1" ToolTip="Update position manually">
                 <Button.Style>
