--- a/WpfApp1/Styles/MenuStyle.xaml
+++ b/WpfApp1/Styles/MenuStyle.xaml
@@ -10,21 +10,42 @@
                 <ControlTemplate TargetType="{x:Type ContextMenu}">
                     <Border Background="{TemplateBinding Background}"
                                 BorderBrush="{TemplateBinding BorderBrush}"
-                                BorderThickness="{TemplateBinding BorderThickness}">
+                                BorderThickness="{TemplateBinding BorderThickness}"
+                                CornerRadius="10">
                         <StackPanel IsItemsHost="True" />
                     </Border>
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
     </Style>
+
     <Style TargetType="{x:Type MenuItem}">
         <Setter Property="Foreground" Value="White" />
         <Setter Property="Background" Value="#FF2F2F2F" />
         <Setter Property="Padding" Value="10" />
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type MenuItem}">
+                    <Border Name="Border" Background="{TemplateBinding Background}" BorderThickness="{TemplateBinding BorderThickness}" BorderBrush="{TemplateBinding BorderBrush}" SnapsToDevicePixels="True">
+                        <ContentPresenter Name="HeaderHost" ContentSource="Header" RecognizesAccessKey="True" />
+                    </Border>
+                    <ControlTemplate.Triggers>
+                        <Trigger Property="IsHighlighted" Value="True">
+                            <Setter TargetName="Border" Property="Background" Value="#3D26A0DA" />
+                            <Setter TargetName="Border" Property="BorderBrush" Value="#ff0000" />
+                        </Trigger>
+                        <Trigger Property="IsEnabled" Value="False">
+                            <Setter TargetName="HeaderHost" Property="TextElement.Foreground" Value="#FF707070" />
+                        </Trigger>
+                    </ControlTemplate.Triggers>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
         <Style.Triggers>
             <Trigger Property="IsMouseOver" Value="True">
-                <Setter Property="Foreground" Value="Black" />
+                <Setter Property="Foreground" Value="Red" />
                 <Setter Property="Background" Value="White" />
+                <Setter Property="FocusVisualStyle" Value="{x:Null}" />
             </Trigger>
         </Style.Triggers>
     </Style>
