--- a/WpfApp1/MainWindow.xaml
+++ b/WpfApp1/MainWindow.xaml
@@ -119,7 +119,7 @@
                     Margin="105,10,55,25" 
                     Width="40" 
                     Height="40" 
-                    ToolTip="Kill process" 
+                    ToolTip="Kill active background process" 
                     Cursor="Hand" 
                     Grid.Column="2" >
                 <Image Source="/assets/skullWhite.png" 
@@ -131,6 +131,30 @@
                         <Style.Triggers>
                             <Trigger Property="IsMouseOver" Value="True">
                                 <Setter Property="Background" Value="#dddd00"/>
+                            </Trigger>
+                        </Style.Triggers>
+                    </Style>
+                </Button.Style>
+            </Button>
+
+            <!-- CREATE NEW TASK BUTTON -->
+            <Button x:Name="birthButton"
+                    Click="newBackgroundTask"
+                    Margin="60,10,100,25" 
+                    Width="40" 
+                    Height="40" 
+                    ToolTip="Create new background process" 
+                    Cursor="Hand" 
+                    Grid.Column="2" >
+                <Image Source="/assets/plus.png" 
+                       Width="28" 
+                       Height="28"/>
+                <Button.Style>
+                    <Style TargetType="Button" BasedOn="{StaticResource CloseButton}">
+                        <Setter Property="Background" Value="{DynamicResource SecondaryBlue}"/>
+                        <Style.Triggers>
+                            <Trigger Property="IsMouseOver" Value="True">
+                                <Setter Property="Background" Value="{DynamicResource PrimaryBlue}"/>
                             </Trigger>
                         </Style.Triggers>
                     </Style>
