--- a/WpfApp1/MainWindow.xaml
+++ b/WpfApp1/MainWindow.xaml
@@ -143,7 +143,7 @@
                     Margin="100,11,60,24" 
                     Width="40" 
                     Height="40" 
-                    ToolTip="Create new background process" 
+                    ToolTip="Play/pause the sender" 
                     Cursor="Hand" 
                     Grid.Column="2" >
                 <Image Source="/assets/pause.png" 
